syntax = "proto3";

option go_package = "github.com/40471/go-grpc-examples/2-gRPC-notification-service/proto";

package notifications;

service NotificationService {
    rpc Subscribe (SubscriptionRequest) returns (stream Notification);
    rpc PublishEvent (PublishEventRequest) returns (PublishEventResponse);
}

message SubscriptionRequest {
    string user_id = 1;
    string event_type = 2;
    string filter = 3;
}

message Notification {
    string event_type = 1;
    string filter = 2;
    string message = 3;
    int64 timestamp = 4;
}

message PublishEventRequest {
    string event_type = 1;
    string filter = 2;
    string message = 3;
}

message PublishEventResponse {
    string status = 1;
}